--- a/config/locales/models/text_prop.ja.yml
+++ b/config/locales/models/text_prop.ja.yml
@@ -3,10 +3,12 @@ ja:
     models:
       text_prop: "URL属性"
     attributes:
-      text_prop:
+      text_prop: &text_prop_attrs
         id: "URL属性ID"
         name: "タイトル"
         text_content: "URL"
         created_at: "作成日時"
         updated_at: "更新日時"
+      stock_product_text_props/stored_prop: *text_prop_attrs
+      stock_product/stock_product_text_props/stored_prop: *text_prop_attrs
 
