--- a/config/locales/models/image_prop.ja.yml
+++ b/config/locales/models/image_prop.ja.yml
@@ -3,10 +3,12 @@ ja:
     models:
       image_prop: "画像属性"
     attributes:
-      image_prop:
+      image_prop: &image_prop_attrs
         id: "画像属性ID"
         name: "タイトル"
         image: "画像"
         created_at: "作成日時"
         updated_at: "更新日時"
+      stock_product_image_props/stored_prop: *image_prop_attrs
+      stock_product/stock_product_image_props/stored_prop: *image_prop_attrs
 
