issue #10 productsにカラム追加

--- a/config/locales/models/product.ja.yml
+++ b/config/locales/models/product.ja.yml
@@ -7,6 +7,9 @@ ja:
         id: "商品ID"
         product_code: "商品キー"
         product_name: "商品コード"
+        manufacture_name: "メーカー名"
+        product_model_name: "型式"
+        product_short_name: "呼称"
         category: "最終カテゴリ"
         category_id: "最終カテゴリID"
         title: "ページタイトル"
